; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_isicom.c_drop_dtr_rts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_isicom.c_drop_dtr_rts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isi_port = type { i32, i32, %struct.isi_board* }
%struct.isi_board = type { i64, i32 }

@ISI_RTS = common dso_local global i32 0, align 4
@ISI_DTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.isi_port*)* @drop_dtr_rts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drop_dtr_rts(%struct.isi_port* %0) #0 {
  %2 = alloca %struct.isi_port*, align 8
  %3 = alloca %struct.isi_board*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.isi_port* %0, %struct.isi_port** %2, align 8
  %6 = load %struct.isi_port*, %struct.isi_port** %2, align 8
  %7 = getelementptr inbounds %struct.isi_port, %struct.isi_port* %6, i32 0, i32 2
  %8 = load %struct.isi_board*, %struct.isi_board** %7, align 8
  store %struct.isi_board* %8, %struct.isi_board** %3, align 8
  %9 = load %struct.isi_board*, %struct.isi_board** %3, align 8
  %10 = getelementptr inbounds %struct.isi_board, %struct.isi_board* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %4, align 8
  %12 = load %struct.isi_port*, %struct.isi_port** %2, align 8
  %13 = getelementptr inbounds %struct.isi_port, %struct.isi_port* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  store i32 %14, i32* %5, align 4
  %15 = load i64, i64* %4, align 8
  %16 = call i64 @WaitTillCardIsFree(i64 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %1
  br label %41

19:                                               ; preds = %1
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.isi_board*, %struct.isi_board** %3, align 8
  %22 = getelementptr inbounds %struct.isi_board, %struct.isi_board* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = shl i32 %20, %23
  %25 = or i32 32768, %24
  %26 = or i32 %25, 2
  %27 = load i64, i64* %4, align 8
  %28 = call i32 @outw(i32 %26, i64 %27)
  %29 = load i64, i64* %4, align 8
  %30 = call i32 @outw(i32 3076, i64 %29)
  %31 = load i64, i64* %4, align 8
  %32 = call i32 @InterruptTheCard(i64 %31)
  %33 = load i32, i32* @ISI_RTS, align 4
  %34 = load i32, i32* @ISI_DTR, align 4
  %35 = or i32 %33, %34
  %36 = xor i32 %35, -1
  %37 = load %struct.isi_port*, %struct.isi_port** %2, align 8
  %38 = getelementptr inbounds %struct.isi_port, %struct.isi_port* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = and i32 %39, %36
  store i32 %40, i32* %38, align 4
  br label %41

41:                                               ; preds = %19, %18
  ret void
}

declare dso_local i64 @WaitTillCardIsFree(i64) #1

declare dso_local i32 @outw(i32, i64) #1

declare dso_local i32 @InterruptTheCard(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
